<resources>
    <string name="app_name">Samatha</string>

    <!-- Pantalla inicio sesion -->
    <string name="descripcion">Logotipo Samatha</string>
    <string name="descripcionGoogle">Logotipo Google</string>
    <string name="descripcionFacebook">Logotipo Facebook</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="mailExample">example@example.com</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasenaExample">*********</string>
    <string name="entrar">Entrar</string>
    <string name="registro">Registrarse</string>
    <string name="cuentas">O regístrate con tus cuentas</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="olvidar">¿Olvidaste tu contraseña?</string>

    <!-- Iconos -->
    <string name="inicio">Inicio</string>
    <string name="meditar">Meditar</string>
    <string name="musica">Música</string>
    <string name="chat">Chat Zen</string>
    <string name="contacto">Contacto</string>

    <!-- Inicio -->
    <string name="titulo_Inicio">INICIO</string>

    <!-- Meditacion -->
    <string name="titulo_Meditacion">MEDITACION</string>

    <!-- Musica -->
    <string name="titulo_Musica">MUSICA</string>

    <!-- ChatZen -->
    <string name="titulo_Chat">CHAT ZEN</string>

    <!-- Contacto -->
    <string name="titulo_Contacto">CONTACTO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>