<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:contentDescription="@string/descripcion"
                android:src="@drawable/logotipo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/iniciar"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <!-- Email -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/mailExample"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <!-- Contrasena -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/contrasena"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/contrasenaExample"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <!-- Boton -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/violeta_marca"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:text="@string/entrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/registro"
                android:textColor="#9A21B2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/olvidar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/cuentas"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_google"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">


                    <ImageButton
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/google"
                        android:contentDescription="@string/descripcionGoogle" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/google"
                        android:textAllCaps="false"
                        android:textSize="20sp" />

                </LinearLayout>


                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_facebook"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">


                    <ImageButton
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/facebook"
                        android:contentDescription="@string/descripcionFacebook" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/facebook"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>